[panama] adapt win-tap